Bug 437088 - Title of File Search KCM is duplicated
Summary: Title of File Search KCM is duplicated
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_baloo (other bugs)
Version First Reported In: 5.21.90
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: regression
: 438420 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-14 14:29 UTC by Patrick Silva
Modified: 2021-06-15 22:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.1
Sentry Crash Report:


Attachments
screenshot (143.92 KB, image/png)
2021-05-14 14:29 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-14 14:29:11 UTC
Created attachment 138416 [details]
screenshot

STEPS TO REPRODUCE
1. open System Settings > Search
2. 
3. 

OBSERVED RESULT
duplicated title, please see the attached screenshot.

EXPECTED RESULT
not duplicated KCM title

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Patrick Silva 2021-05-14 14:31:10 UTC
Language KCM also displays two titles, but they are not the same.
They are "Language" and "Configure Plasma translations".
Comment 2 Nate Graham 2021-05-18 20:26:57 UTC
Can reproduce.

This was caused by https://invent.kde.org/plasma/systemsettings/-/commit/8b261e7ca6242c7fe541fa3813d89e6c245a7be3, which was the fix for Bug 433827.

Marco, could you take a look?
Comment 3 Bug Janitor Service 2021-06-10 13:25:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/68
Comment 4 Nate Graham 2021-06-10 13:53:28 UTC
Git commit 3365534ce2f604f75e420499413863167c1f8a84 by Nate Graham, on behalf of Marco Martin.
Committed on 10/06/2021 at 13:53.
Pushed by ngraham into branch 'master'.

only update the global header reacting to the active page

if we get new pages which aren't active, they're non
influent wrt the status of the global header

M  +3    -1    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/3365534ce2f604f75e420499413863167c1f8a84
Comment 5 Nate Graham 2021-06-10 13:54:15 UTC
Git commit 0ea21d35d988a36b937b7bc0772561b47077da7b by Nate Graham, on behalf of Marco Martin.
Committed on 10/06/2021 at 13:54.
Pushed by ngraham into branch 'Plasma/5.22'.

only update the global header reacting to the active page

if we get new pages which aren't active, they're non
influent wrt the status of the global header


(cherry picked from commit 3365534ce2f604f75e420499413863167c1f8a84)

M  +3    -1    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/0ea21d35d988a36b937b7bc0772561b47077da7b
Comment 6 Nate Graham 2021-06-15 22:48:55 UTC
*** Bug 438420 has been marked as a duplicate of this bug. ***