only update the global header reacting to the active page

if we get new pages which aren't active, they're non
influent wrt the status of the global header
BUG:437088